| Bug #4506 | mysqlbinlog --position --read-from-remote-server has wrong "# at" lines | ||
|---|---|---|---|
| Submitted: | 11 Jul 2004 10:23 | Modified: | 17 Jul 2004 17:15 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 4.0 | OS: | Any (all) |
| Assigned to: | Guilhem Bichot | Target Version: | |
[11 Jul 2004 10:23]
Guilhem Bichot
[17 Jul 2004 17:15]
Guilhem Bichot
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
ChangeSet@1.1897.1.1, 2004-07-17 16:58:16+02:00, guilhem@mysql.com
